<PreferenceScreen
xmlns:android="http://schemas.android.com/apk/res/android"
android:title="@string/options"
>

	<ListPreference android:title="@string/language"
                      android:key="lang"
                      android:defaultValue="default"
                      android:entries="@array/listArray"
                      android:entryValues="@array/listValues" />

   <EditTextPreference 
    android:key="port" 
    android:title="@string/port_number"
	android:inputType="numberDecimal"
    />    

	<PreferenceCategory android:title="@string/auth">

	<PreferenceScreen android:title="@string/auth_method">
	
	<CheckBoxPreference
    android:title="@string/password"
    android:key="password_auth" />
		  
	<CheckBoxPreference
    android:title="@string/manual_confirmation"
    android:key="manual_auth"
	android:defaultValue="true"
	/>
	
	</PreferenceScreen>
	
	<EditTextPreference 
    android:key="password" 
    android:title="@string/password"
	android:inputType=""
    />

	
	</PreferenceCategory>
	
	<!-- -->
	
	<PreferenceCategory android:title="@string/dev">

	<CheckBoxPreference
    android:title="@string/debug"
    android:key="debug" />

	</PreferenceCategory>
	
	<!-- -->

</PreferenceScreen>
