<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >
	
<TextView 
android:text="@string/app_name"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_centerInParent="true"
android:textSize="30sp"
android:padding="30sp"
/>

<View 
android:id="@+id/status_view"
android:layout_width="30sp"
    android:layout_height="30sp"
    android:background="@drawable/server_off_lamp"/>

<TextView 
android:id="@+id/port"
android:text="@string/port_q"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_centerInParent="true"
android:textSize="20sp"
android:padding="20sp"
/>

<Space
android:layout_width="1sp"
android:layout_height="30sp"/>

<Button
android:id="@+id/ips_btn"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:onClick="ipsBtnClick"
android:text="@string/ips_btn_text" />
	
</LinearLayout>

